force-app/main/default/objects/Application_Answer__c/Application_Answer__c.object-meta.xml
<CustomObject>
    <description>Captures applicants responses to questions in the expression of interest form</description>
    <label>Application Answer</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Application Answers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Answer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>