force-app/main/default/objects/Application_Answer__c/fields/Answer_Key__c.field-meta.xml
<CustomField>
    <fullName>Answer_Key__c</fullName>
    <description>Application ID:Form:Question Name</description>
    <externalId>true</externalId>
    <inlineHelpText>Application ID:Form:Question Name</inlineHelpText>
    <label>Answer Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>