force-app/main/default/objects/Application_Answer__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Application Answer</relationshipLabel>
    <relationshipName>Application_Answer_del</relationshipName>
    <type>Lookup</type>
</CustomField>