force-app/main/default/objects/Application_Answer__c/fields/Application_Question__c.field-meta.xml
<CustomField>
    <fullName>Application_Question__c</fullName>
    <label>Application Question</label>
    <referenceTo>Application_Question__c</referenceTo>
    <relationshipLabel>Application Answer</relationshipLabel>
    <relationshipName>Application_Answer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>