force-app/main/default/objects/Application_Answer__c/fields/Application_Question_Template__c.field-meta.xml
<CustomField>
    <fullName>Application_Question_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Question Template</label>
    <referenceTo>Application_Question_Template__c</referenceTo>
    <relationshipLabel>Application Answer</relationshipLabel>
    <relationshipName>Application_Answer</relationshipName>
    <type>Lookup</type>
</CustomField>