force-app/main/default/objects/Application_Answer__c/fields/Attachment_Answer__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Answer__c</fullName>
    <label>Attachment Answer</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>