force-app/main/default/objects/Application_Answer__c/fields/Checkbox_Answer__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Answer</label>
    <type>Checkbox</type>
</CustomField>