force-app/main/default/objects/Application_Answer__c/fields/Checkboxes_Answer__c.field-meta.xml
<CustomField>
    <fullName>Checkboxes_Answer__c</fullName>
    <label>Checkboxes Answer</label>
    <type>TextArea</type>
</CustomField>