force-app/main/default/objects/Application_Answer__c/fields/Currency_Answer__c.field-meta.xml
<CustomField>
    <fullName>Currency_Answer__c</fullName>
    <defaultValue>null</defaultValue>
    <label>Currency Answer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>