force-app/main/default/objects/Application_Answer__c/fields/Data_Conversion_Form__c.field-meta.xml
<CustomField>
    <fullName>Data_Conversion_Form__c</fullName>
    <label>Data Conversion Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>