force-app/main/default/objects/Application_Answer__c/fields/Data_Conversion_Form_Section__c.field-meta.xml
<CustomField>
    <fullName>Data_Conversion_Form_Section__c</fullName>
    <label>Data Conversion Form Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>