force-app/main/default/objects/Application_Answer__c/fields/Date_Answer__c.field-meta.xml
<CustomField>
    <fullName>Date_Answer__c</fullName>
    <label>Date Answer</label>
    <type>Date</type>
</CustomField>