force-app/main/default/objects/Application_Answer__c/fields/Date_Day_Answer__c.field-meta.xml
<CustomField>
    <fullName>Date_Day_Answer__c</fullName>
    <label>Date Day Answer</label>
    <length>2</length>
    <type>Text</type>
</CustomField>