force-app/main/default/objects/Application_Answer__c/fields/Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_Formula__c</fullName>
    <formula>DATE(VALUE(Date_Year_Answer__c),VALUE(Date_Month_Answer__c),VALUE(Date_Day_Answer__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Formula</label>
    <type>Date</type>
</CustomField>