force-app/main/default/objects/Application_Answer__c/fields/Date_Year_Answer__c.field-meta.xml
<CustomField>
    <fullName>Date_Year_Answer__c</fullName>
    <label>Date Year Answer</label>
    <length>4</length>
    <type>Text</type>
</CustomField>