force-app/main/default/objects/Application_Answer__c/fields/Email_Answer__c.field-meta.xml
<CustomField>
    <fullName>Email_Answer__c</fullName>
    <label>Email Answer</label>
    <type>Email</type>
</CustomField>