force-app/main/default/objects/Application_Answer__c/fields/EOI_Status__c.field-meta.xml
<CustomField>
    <fullName>EOI_Status__c</fullName>
    <formula>TEXT(Application__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOI Status</label>
    <type>Text</type>
</CustomField>