force-app/main/default/objects/Application_Answer__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <formula>IF(ISBLANK(Application_Question_Template__c), Data_Conversion_Form__c, Application_Question_Template__r.Form__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form</label>
    <type>Text</type>
</CustomField>