force-app/main/default/objects/Application_Answer__c/fields/Form_Section__c.field-meta.xml
<CustomField>
    <fullName>Form_Section__c</fullName>
    <formula>Application_Question_Template__r.Application_Form_Section__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Section</label>
    <type>Text</type>
</CustomField>