force-app/main/default/objects/Application_Answer__c/fields/Is_Question__c.field-meta.xml
<CustomField>
    <fullName>Is_Question__c</fullName>
    <formula>NOT(ISBLANK(Application_Question__r.Question_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Question</label>
    <type>Checkbox</type>
</CustomField>