force-app/main/default/objects/Application_Answer__c/fields/Multi_Picklist_Answers__c.field-meta.xml
<CustomField>
    <fullName>Multi_Picklist_Answers__c</fullName>
    <label>Multi-Picklist Answers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>