force-app/main/default/objects/Application_Answer__c/fields/Percent_Answer__c.field-meta.xml
<CustomField>
    <fullName>Percent_Answer__c</fullName>
    <defaultValue>null</defaultValue>
    <label>Percent Answer</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>