force-app/main/default/objects/Application_Answer__c/fields/Picklist_Answer__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Answer__c</fullName>
    <label>Picklist Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>