force-app/main/default/objects/Application_Answer__c/fields/Radio_Answer__c.field-meta.xml
<CustomField>
    <fullName>Radio_Answer__c</fullName>
    <label>Radio Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>