force-app/main/default/objects/Application_Answer__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <formula>IF(INCLUDES(Application_Question__r.Question_Type__c, "Single"),
IF(Checkbox_Answer__c = TRUE, "True", "False"),
"")&amp;
Checkboxes_Answer__c &amp;
TEXT(Date_Answer__c) &amp;
Email_Answer__c &amp;
Multi_Picklist_Answers__c &amp;
Picklist_Answer__c &amp;
Short_Text_Answer__c &amp;
Radio_Answer__c &amp;
IF(!ISBLANK(Date_Day_Answer__c)&amp;&amp;!ISBLANK(Date_Month_Answer__c)&amp;&amp;!ISBLANK(Date_Year_Answer__c),Date_Day_Answer__c+'/'+Date_Month_Answer__c+'/'+Date_Year_Answer__c,"") &amp;
IF(Percent_Answer__c!=0, TEXT(Percent_Answer__c*100)+"%", "") &amp;
IF(Currency_Answer__c!=0, "£"+TEXT(Currency_Answer__c), "")</formula>
    <label>Response</label>
    <type>Text</type>
</CustomField>