force-app/main/default/objects/Application_Answer__c/fields/Short_Text_Answer__c.field-meta.xml
<CustomField>
    <fullName>Short_Text_Answer__c</fullName>
    <label>Short Text Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>