force-app/main/default/objects/Application_Answer__c/fields/Text_Answer__c.field-meta.xml
<CustomField>
    <fullName>Text_Answer__c</fullName>
    <label>Text Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>