force-app/main/default/objects/Application_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Application__c</columns>
    <columns>NAME</columns>
    <columns>Application_Question__c</columns>
    <columns>Application_Question_Template__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>